--- a/Homework 05/css/style.css
+++ b/Homework 05/css/style.css
@@ -28,13 +28,11 @@ body {
 
 .container {
 	height: 1064px;
-	width: 1349px;
     margin: 0 auto;
     position: relative;
 }
 
 .top_menu {
-    width: 1349px;
 	height: 36px;
 	background-image: url(../img/top-menu.png);
     position: relative;
@@ -64,7 +62,7 @@ body {
     display: block;
     text-decoration: none;
     color: #60b5ed;
-    font-family: 'Helvetica Neue';
+    font-family: 'Helvetica Neue', Tahoma, sans-serif;
     font-size: 14px;
     width: 50px;
     height: 26px;
@@ -120,7 +118,7 @@ body {
     left: 50px;
     color: #feffff;
     font-size: 14px;
-    font-family: 'Helvetica Neue';
+    font-family: 'Helvetica Neue', Tahoma, sans-serif;
 }
 
 .list_2:hover {
@@ -146,13 +144,13 @@ body {
     padding: 10px 3px 0px 5px;
     color: #feffff;
     font-size: 14px;
-    font-family: 'Helvetica Neue';
+    font-family: 'Helvetica Neue', Tahoma, sans-serif;
 }
 
 .list_3 li a {
     color: #feffff;
     font-size: 14px;
-    font-family: 'Helvetica Neue';
+    font-family: 'Helvetica Neue', Tahoma, sans-serif;
 }
 
 .list_3_1 {
@@ -200,7 +198,7 @@ body {
     background: rgba(0,0,0,0.5);
     text-align: center;
     font-size: 24px;
-    font-family: 'Helvetica Neue';
+    font-family: 'Helvetica Neue', Tahoma, sans-serif;
     line-height: 62px;
     color: white;
     margin-bottom: 2px;
@@ -269,7 +267,7 @@ form {
     top: 65px;
     color: #999999;
     font-size: 14px;
-    font-family: 'Helvetica Neue';
+    font-family: 'Helvetica Neue', Tahoma, sans-serif;
 }
 
 .first_name,
@@ -285,7 +283,7 @@ form {
     color: #cccccc;
     text-indent: 20px;
     font-size: 14px;
-    font-family: 'Helvetica Neue';
+    font-family: 'Helvetica Neue', Tahoma, sans-serif;
 }
 
 .first_name {
@@ -340,7 +338,7 @@ form {
     top: 350px;
     left: 2px;
     color: #cccccc;
-    font:14px 'Helvetica Neue';
+    font:14px 'Helvetica Neue', Tahoma, sans-serif;
 }
 
 .create {
@@ -374,7 +372,7 @@ form {
     left: 140px;
     color: #cccccc;
     font-size: 11px;
-    font-family: 'Helvetica Neue';
+    font-family: 'Helvetica Neue', Tahoma, sans-serif;
 }
 
 .footer_1 {
@@ -384,5 +382,5 @@ form {
     left: 227px;
     color: #cccccc;
     font-size: 11px;
-    font-family: 'Helvetica Neue';
+    font-family: 'Helvetica Neue', Tahoma, sans-serif;
 }
